--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,11 @@ else ()
     project ("bulk")
 endif()
 
+if (MSVC)
+else ()
+    find_package (Threads)
+endif()
+
 # Добавьте источник в исполняемый файл этого проекта.
 add_executable (bulk "main.cpp" "command.cpp" "thread.cpp")
 
@@ -17,8 +22,11 @@ if (MSVC)
         /W4
     )
 else ()
+
+    target_link_libraries (bulk Threads::Threads)
+
     target_compile_options(bulk PUBLIC
-        -Wall -Wextra -pedantic -Werror -pthread
+        -Wall -Wextra -pedantic -Werror
     )
 endif()
 
